# simple-clap-host-helper-lib

./: Cargo.toml  LICENSE  README.md
src/: host.rs  lib.rs
src/plugin/: ext.rs  instance.rs  library.rs
src/plugin/ext/: audio_ports.rs  gui.rs  note_ports.rs  params.rs  posix_fd_support.rs  state.rs  timer_support.rs
src/plugin/instance/: process.rs
